# pengle

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pengle/: utils.py
pengle/data/: loader.py  splitter.py  target.py
pengle/dataset/: dataset.py
pengle/evaluate/: evaluator.py  reporter.py
pengle/storage/: storage.py
pengle/trainer/: model.py  pipeline.py  trainer.py
pengle/transformer/: base.py  categorical_features.py  features.py  preprocessor.py  statistical_features.py
test/dataset/: test_dataset.py
test/trainer/: test_model.py  test_trainer.py
test/transformer/: test_features.py
